# getting_-emails-_list

./: .env.example  .gitignore  README.md  pyproject.toml
messages/messages/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
messages/msg/: admin.py  base.py  constants.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
messages/msg/migrations/: 0001_initial.py  0002_alter_email_email.py  0003_alter_messagedata_email.py  0004_messagedata_email_from.py  0005_messagedata_uid_alter_messagedata_email.py  0006_alter_messagedata_title.py  0007_messagefile.py
messages/templates/includes/: footer.html  header.html
messages/templates/msg/: add_mail.html  get_data.html
