[tool.poetry]
name = "messages"
version = "0.1.0"
description = ""
authors = ["Radzey Maxim <max.radzey@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "3.14.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
channels = "^4.1.0"
channels-redis = "^4.2.0"
daphne = "^4.1.2"
django-bootstrap5 = "^24.2"
celery = "^5.4.0"
whitenoise = "^6.7.0"
cryptography = "^43.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
